PC-87 workaround for chrome z-index bug

--- a/assets/scss/editor.scss
+++ b/assets/scss/editor.scss
@@ -46,13 +46,15 @@
   }
 
   #open-file-explorer {
+    background: $gray-lighter;
     border-right: 1px solid rgba(0,0,0,.1);
     box-shadow: inset 0 1px 0 #fff;
     color: $gray-dark;
-    height: 36px;
+    height: 35px;
     line-height: 34px;
     top: 0;
     user-select: none;
+    z-index: 9999; // chrome z-index glitch
 
     &:hover {
       color: $gray-darker;
@@ -119,6 +121,7 @@
   // select menu tabs
   #project-select-tabs {
     overflow: hidden;
+    z-index: 9999; // chrome z-index glitch
 
     button {
 
